--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,19 @@
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA1_tzWZqGW7SflnLQ2PQquTuQtbS7cK2I&callback=initMap"
     type="text/javascript"></script>
 
+  <!-- 
+  <link rel="stylesheet" type="text/css" href="css/lightpick.css">
+  ...
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+  <script src="lightpick.js"></script>
+  <script>
+    var picker = new Lightpick({ field: document.getElementById('datepicker') });
+  </script> -->
+
+
+
+
+
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
