--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,11 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Source+Sans+Pro:400,600,700&display=swap"
     rel="stylesheet" />
   <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC5P0INV5c1ija4eNB4W-o7yODA3W2ErEc&callback=initMap"
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLWJpoFP9AnEhzmU8P3eRR7hT7L4fsHSk&callback=initMap"
     type="text/javascript"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.1.0/react.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.1.0/react-dom.min.js"></script>
 
   <!-- 
   <link rel="stylesheet" type="text/css" href="css/lightpick.css">
