--- a/public/index.html
+++ b/public/index.html
@@ -18,9 +18,9 @@
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Source+Sans+Pro:400,600,700&display=swap"
     rel="stylesheet" />
-  <script async defer
+  <!-- <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLWJpoFP9AnEhzmU8P3eRR7hT7L4fsHSk&callback=initMap"
-    type="text/javascript"></script>
+    type="text/javascript"></script> -->
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.1.0/react.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.1.0/react-dom.min.js"></script>
